styles: Replace hamburger icon with one of overhauled icon set (#82) Replacing hamburger icon with new WikimediaUI icon set one, aligning it to top, fixing transitions and color values to provide appropriate `:hover` feedback and aligning logo on desktop with menu text start following design templates. Bug: [T167164](https://phabricator.wikimedia.org/T167164)

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -207,7 +207,7 @@ code {
 }
 
 	.site__title {
-		color: var( --wmui-color-base10 ); /* --color-base-emphasized */
+		color: var( --wmui-color-base10 );
 		margin-top: 0;
 		height: 6.4rem;
 		font-family: var( --font-family-sans--fallback ); /* Fallback */
@@ -218,12 +218,12 @@ code {
 		.site__title a {
 			color: inherit;
 			display: inline-block;
-			padding-top: 1.2rem;
+			padding: 1.2rem 3.2rem 0;
+			transition: color var( --transition-medium );
 		}
 		.site__title a:hover {
-			color: var( --wmui-color-base10 );
+			color: var( --wmui-color-base0 ); /* --color-base-emphasized */
 			text-decoration: none;
-			transition: color var( --transition-medium );
 		}
 
 		.site__org {
@@ -237,7 +237,7 @@ code {
 	/* ... Navigation button ... */
 	.btn--nav-main {
 		position: absolute;
-		top: 1rem; /* FIXME: not `0.8rem` */
+		top: 1.2rem;
 		width: 4.2rem;
 		height: 4.2rem;
 		cursor: pointer;
@@ -247,23 +247,32 @@ code {
 	.btn--nav-main i {
 		display: block;
 		height: 4.2rem;
-		transition: var( --transition-medium );
+		transition: color var( --transition-medium ), box-shadow var( --transition-medium );
 	}
 
 	.btn--nav-main i:before,
 	.btn--nav-main i:after {
 		content: '';
 		background-color: var( --wmui-color-base20 );
-		width: 2.4rem;
+		width: 2rem;
 		height: 2px;
 		position: absolute;
-		top: 12px;
+		top: 0.4rem;
 		left: 0;
 	}
 
 	.btn--nav-main i:after {
-		top: 20px;
-		box-shadow: 0 8px 0 var( --wmui-color-base20 );
+		top: 1.1rem;
+		box-shadow: 0 0.7rem 0 var( --wmui-color-base20 );
+	}
+
+	.btn--nav-main i:hover:before,
+	.btn--nav-main i:hover:after {
+		background-color: var( --wmui-color-base0 ); /* --color-base-emphasized */
+	}
+
+	.btn--nav-main i:hover:after {
+		box-shadow: 0 0.7rem 0 var( --wmui-color-base0 );
 	}
 
 	.btn--nav-main span {
@@ -563,12 +572,12 @@ code {
 	}
 
 	.site__title {
-		margin-left: 5.6rem;
+		margin-left: 4.2rem;
 	}
 
-	.site__title a {
-		padding-right: 3.2rem;
-	}
+		.site__title a {
+			padding-left: 0;
+		}
 
 	.lnk--contribute span {
 		display: none;
@@ -654,11 +663,6 @@ code {
 
 /* ... Smartphone landscape ... */
 @media ( min-width: 568px ) {
-
-	.site__title a {
-		padding-right: 0;
-	}
-
 	.lnk--contribute {
 		display: block;
 		position: absolute;
@@ -689,10 +693,14 @@ code {
 		margin-left: 0;
 	}
 
-		.lnk--contribute span {
-			display: inline;
-			opacity: 1;
+		.site__title a {
+			padding-left: 3.2rem;
 		}
+
+	.lnk--contribute span {
+		display: inline;
+		opacity: 1;
+	}
 
 	.col--start {
 		width: 33.33333333%;
